Corrección del menu nav

--- a/public/pages/tema_3.html
+++ b/public/pages/tema_3.html
@@ -1,6 +1,6 @@
 <div class="container" id="page-tema-3">
     <div class="header-ecored text-dark">
-        <h1>3. Estrategias Operativas</h1>
+        <h1>3. Estrategias Operativas.</h1>
     </div>
     <div class="jumbotron bg-white">
         <div class="row justify-content-center align-items-center">
