--- a/public/pages/tema_2.html
+++ b/public/pages/tema_2.html
@@ -1,6 +1,6 @@
 <div class="container" id="page-tema-2">
     <div class="header-ecored text-dark">
-        <h1>2. Mecanismos y espacios de participación</h1>
+        <h1>2. Mecanismos y espacios de participación.</h1>
     </div>
     <div class="jumbotron bg-white">
         <div class="row justify-content-center align-items-center"></div>
