Corrección del row. en el tema 1

--- a/public/pages/tema_1.html
+++ b/public/pages/tema_1.html
@@ -31,7 +31,7 @@
         <p class="header-subtitle my-3">Responsabilidades Específicas </p>
         <p>Teniendo en cuenta en cuenta las responsabilidades generales, a continuación, se exponen algunas responsabilidades específicas que genera la política en diferentes instancias (departamental, municipal, EPS e IPS) dentro del sistema de salud en el marco de sus competencias: </p>
         <div class="jumbotron bg-b">
-            <div class="row justify-content-center align-middle">
+            <div class="row justify-content-center align-items-center">
                 <div class="col-auto"><img class="img-fluid" src="assets/images/pages/tema-2/icon-2.svg" style="max-width: 120px" /></div>
                 <div class="col-9 justify-content-center align-items-center">
                     <ul class="list-unstyled">
