--- a/public/material.html
+++ b/public/material.html
@@ -540,8 +540,8 @@
                             </div>
                             <div class="col-12 col-md-4"> <img class="img-a img-fluid" src="assets/images/pages/tema-4/img_01.svg"></div>
                         </div>
-                        <div class="header-arrow my-5">
-                            <h3 class="text-center">Estrategia Educativa</h3>
+                        <div class="sub-teme mt-5">
+                            <h3>Estrategia Educativa</h3>
                         </div>
                         <p>Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiar capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar:</p>
                         <div class="list mt-5">
@@ -576,8 +576,8 @@
                                 <p>Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, conocimientos y apertura hacia la participación. </p>
                             </div>
                         </div>
-                        <div class="header-arrow my-5">
-                            <h3 class="text-center">Estrategia de comunicación</h3>
+                        <div class="sub-teme mt-5">
+                            <h3>Estrategia de comunicación</h3>
                         </div>
                         <p>Busca articular a todos los actores y componentes del sistema bajo una perspectiva de acción comunicativa. Esta estrategia es fundamental para el desarrollo de los procesos de participación en la medida en que posibilita la interacción Estado – ciudadanía, a través del acceso a información y de la definición de los mecanismos de producción, circulación y apropiación de esta. </p>
                         <p>En tal sentido, la estrategia deberá generar: </p>
@@ -629,8 +629,8 @@
                                 <p>Canales de comunicación abiertos y de doble vía que faciliten la interacción entre Estado – sociedad civil. </p>
                             </div>
                         </div>
-                        <div class="header-arrow my-5">
-                            <h3 class="text-center">Estrategia de gestión </h3>
+                        <div class="sub-teme mt-5">
+                            <h3>Estrategia de gestión </h3>
                         </div>
                         <p>Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la Política. En tal sentido, esta estrategia deberá:</p>
                         <div class="list mt-5">
