Ajuste texto e integración articulate

--- a/public/pages/1-tema.html
+++ b/public/pages/1-tema.html
@@ -1,6 +1,6 @@
 <div class="container" id="page-tema-1">
     <div class="header-ecored text-dark">
-        <h1>2. Responsabilidades y Deberes que genera la Política de Participación Social en Salud.</h1>
+        <h1>2. Responsabilidades y deberes que genera la Política de Participación Social en Salud</h1>
     </div>
     <div class="jumbotron bg-white">
         <p>La Política de Participación Social en Salud genera las siguientes responsabilidades para cada uno de los actores que integran del sistema de salud: </p>
@@ -36,7 +36,7 @@
         <div class="sub-teme mt-5">
             <h3>Garantía del derecho a la participación en salud</h3>
         </div>
-        <p>La Oficina de Gestión Territorial, Emergencias y Desastres del Ministerio de Salud y Protección Social, promoverá la PPSS como instrumento para garantizar el ejercicio del derecho a la participación social en salud. </p>
+        <p>La Oficina de gestión territorial, emergencias y desastres del Ministerio de Salud y Protección Social, promoverá la PPSS como instrumento para garantizar el ejercicio del derecho a la participación social en salud. </p>
         <div class="sub-teme mt-5">
             <h3>Respeto del derecho a la participación en salud</h3>
         </div>
@@ -44,9 +44,9 @@
         <div class="sub-teme mt-5">
             <h3>Promoción y protección del derecho a la participación en salud</h3>
         </div>
-        <p>La Superintendencia Nacional de Salud, las entidades territoriales, las Entidades Administradoras de Planes de Beneficios – EAPB, las Instituciones Prestadoras de Servicios de Salud – IPS y las demás entidades que tengan a su cargo acciones en salud, incentivarán el desarrollo de ejercicios de participación y de control social, y estarán obligados a su protección, así como a propiciar las garantías para su ejercicio, en el marco de lo señalado en el artículo 12 de la Ley 1751 de 2015. Para ello, deberán fortalecer e implementar los espacios de participación social que se requieran para estimular la participación de la ciudadanía en el cumplimiento de los objetivos de la Política de Participación Social en Salud, en el marco de la normatividad vigente. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263 </p>
+        <p>La Superintendencia Nacional de Salud, las entidades territoriales, las Entidades Administradoras de Planes de Beneficios – EAPB, las Instituciones Prestadoras de Servicios de Salud – IPS y las demás entidades que tengan a su cargo acciones en salud, incentivarán el desarrollo de ejercicios de participación y de control social, y estarán obligados a su protección, así como a propiciar las garantías para su ejercicio, en el marco de lo señalado en el Artículo 12 de la Ley 1751 de 2015. Para ello, deberán fortalecer e implementar los espacios de participación social que se requieran para estimular la participación de la ciudadanía en el cumplimiento de los objetivos de la Política de Participación Social en Salud, en el marco de la normatividad vigente. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263 </p>
         <div class="sub-ecored mt-5">
-            <h3>Responsabilidades Específicas </h3>
+            <h3>Responsabilidades específicas </h3>
         </div>
         <p>Teniendo en cuenta en cuenta las responsabilidades generales, a continuación, se exponen algunas responsabilidades específicas que genera la política en diferentes instancias (departamental, municipal, EPS e IPS) dentro del sistema de salud en el marco de sus competencias: </p>
         <div class="list ml-5 mt-5">
@@ -162,7 +162,7 @@
                 <h3>Defensa de lo público</h3>
                 <hr class="border-color-primary border-2" />
                 <p>Es deber de la ciudadanía y sus organizaciones la defensa de lo público, con base en el principio de prevalencia del interés general. En tal sentido, la defensa de lo público se debe expresar tanto en sus acciones como en la vigilancia de las actuaciones de los otros, así como en la vigilancia de los integrantes del sistema que tengan a su cargo acciones en salud, en el marco de sus competencias y funciones, las cuales deberán regirse por la prevalencia del bien general. </p>
-                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263 </p>
+                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263. </p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center card-media-color py-5 px-5 mt-5">
@@ -170,8 +170,8 @@
             <div class="col">
                 <h3>Rendición de cuentas a los asociados</h3>
                 <hr class="border-color-primary border-2" />
-                <p>Los representantes de la ciudadanía en espacios como las asociaciones de usuarios, Comités de Participación Comunitaria(COPACOS), juntas directivas, el Consejo Territorial de Planeación, el Consejo Territorial de Seguridad Social en Salud, las veedurías y otros espacios de participación social en salud que se generen, están obligados a rendir cuentas a los integrantes de dichos espacios o a la ciudadanía en general, con relación a sus actuaciones y participación en dichas instancias, lo anterior, en procura de fortalecer prácticas de transparencia. </p>
-                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263 </p>
+                <p>Los representantes de la ciudadanía en espacios como las asociaciones de usuarios, Comités de Participación Comunitaria (COPACOS), juntas directivas, el consejo territorial de planeación, el Consejo Territorial de Seguridad Social en Salud, las veedurías y otros espacios de participación social en salud que se generen, están obligados a rendir cuentas a los integrantes de dichos espacios o a la ciudadanía en general, con relación a sus actuaciones y participación en dichas instancias, lo anterior, en procura de fortalecer prácticas de transparencia. </p>
+                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263. </p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center card-media-color py-5 px-5 mt-5">
@@ -179,8 +179,8 @@
             <div class="col">
                 <h3>Seguimiento y evaluación</h3>
                 <hr class="border-color-primary border-2" />
-                <p>Corresponde al Ministerio de Salud y Protección Social, a través del Grupo para la Gestión y el Fomento de la Participación Social en Salud, departamentos y distritos, realizar el seguimiento, monitoreo y evaluación de la PPSS que permita identificar los alcances, logros y aprendizajes de esta por parte de los integrantes del Sistema. </p>
-                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263</p>
+                <p>Corresponde al Ministerio de Salud y Protección Social, a través del Grupo para la Gestión y el fomento de la participación social en salud, departamentos y distritos, realizar el seguimiento, monitoreo y evaluación de la PPSS que permita identificar los alcances, logros y aprendizajes de esta por parte de los integrantes del Sistema. </p>
+                <p>Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263. </p>
             </div>
         </div>
     </div>
