--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -13,7 +13,7 @@
         <div class="sub-teme mt-5">
             <h3>Estrategia Educativa</h3>
         </div>
-        <p>Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiar capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar:</p>
+        <p>Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiarse de capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar: </p>
         <div class="list mt-5">
             <div class="list__item">
                 <div class="list__item__number"><span>1</span></div>
@@ -43,7 +43,7 @@
                 <div class="list__item__number"><span>4</span></div>
             </div>
             <div class="list__txt">
-                <p>Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, conocimientos y apertura hacia la participación. </p>
+                <p>Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, conocimientos y apertura hacia la participación.</p>
             </div>
         </div>
         <div class="sub-teme mt-5">
@@ -102,13 +102,13 @@
         <div class="sub-teme mt-5">
             <h3>Estrategia de gestión </h3>
         </div>
-        <p>Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la Política. En tal sentido, esta estrategia deberá:</p>
+        <p>Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la política. En tal sentido, esta estrategia deberá:</p>
         <div class="list mt-5">
             <div class="list__item">
                 <div class="list__item__number"><span>1</span></div>
             </div>
             <div class="list__txt">
-                <p>Generar mecanismos y dispositivos que permitan al Estado el cumplimiento de su papel de garante del derecho a la participación y la ciudadanía, el desarrollo de sus capacidades para incidir, decidir y exigir a través de su participación el cumplimiento del derecho la salud.</p>
+                <p>Generar mecanismos y dispositivos que permitan al Estado el cumplimiento de su papel de garante del derecho a la participación y la ciudadanía, el desarrollo de sus capacidades para incidir, decidir y exigir a través de su participación el cumplimiento del derecho a la salud.</p>
             </div>
         </div>
         <div class="list">
