--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark">
-                            <li> <span>Reconocer los principios de la Participación Social en salud como un derecho humano fundamental vinculado con la salud.</span></li>
+                            <li> <span>Fortalecer las capacidades de los servidores públicos, trabajadores de la salud y ciudadanía para ejercer el derecho a la participación teniendo en cuenta la ley estatutaria.</span></li>
+                            <li> <span>Desarrollar acciones de participación social en salud en el marco del derecho a la salud.</span></li>
                         </ul>
                     </div>
                 </div>
